add Bootsrap framework

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,14 @@
 <head>
 <meta charset="utf-8"/>
 <title>Product Manager</title>
+
+
+<link rel="stylesheet" th:href="@{/user.css}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div align="center">
@@ -13,25 +21,20 @@
     
     
     <div>
-    	<form th:action="@{/page/1}">
-    	
-    		Filter:
-    		<input type="text" name="keyword" required />
-    		&nbsp;
-    		<input type="submit" value="Serach" />
-    		&nbsp;
-    		<input type="button" value="Clear" onclick="clearFilter()" />
+    	<form class="form-inline text-center create" th:action="@{/page/1}">
+    		<div class="form-group mx-sm-3 mb-2" >
+    			Filter:
+    			<input type="text" name="keyword" required />
+    		</div>
+    		<button type="submit" class="btn btn-primary mb-2 mx-sm-3">Search</button>
+    		<button type="button" value="Clear" onclick="clearFilter()" class="btn btn-primary mb-2">Clear</button>
     		
     	</form>
     
     
     </div>
     
-    <script type"text/javascript">
-    function clearFilter(){
-    	window.location = "/";
-    }
-    </script>
+
     
     
     <table border="1" cellpadding="10">
@@ -88,6 +91,14 @@
 </div>
     
     
-</div>    
+</div>   
+<footer>
+    <script type"text/javascript">
+    function clearFilter(){
+    	window.location = "/";
+    }
+    </script>
+</footer>
+ 
 </body>
 </html>
