--- a/src/main/resources/templates/edit_product.html
+++ b/src/main/resources/templates/edit_product.html
@@ -4,12 +4,26 @@
 <head>
 <meta charset="utf-8" />
 <title>Edit Product</title>
+
+
+<link rel="stylesheet" th:href="@{/user.css}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+
+
 </head>
 <body>
+
+ <div class="container">
+  <div class="row">   
+    <div class="col-md-12">
 	<div align="center">
 		<h1>Edit Product</h1>
 		<br />
-		<form action="#" th:action="@{/save}" th:object="${product}"
+		<form class="form-inline text-center create" action="#" th:action="@{/save}" th:object="${product}"
 			method="post">
 
 			<table border="0" cellpadding="10">
@@ -30,10 +44,13 @@
 					<td><input type="text" th:field="*{price}" /></td>
 				</tr>								
 				<tr>
-					<td colspan="2"><button type="submit">Save</button> </td>
+					<td colspan="2"><button class="btn btn-primary mb-2 mx-sm-3" type="submit">Save</button> </td>
 				</tr>
 			</table>
 		</form>
+	</div>
+	</div>
+	</div>
 	</div>
 </body>
 </html>
